Remove the lista.reverse() command, and print all the element in regular order.

--- a/Aula_Git_01.ipynb
+++ b/Aula_Git_01.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Aula Git 01.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyN+boDnzuZPtUL0kWmm3RQi",
+      "authorship_tag": "ABX9TyNkhOEOieEtw09uRl2IuJVM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -84,27 +84,29 @@
     {
       "cell_type": "code",
       "source": [
-        "lista.reverse()\n",
-        "lista"
+        "for num in lista:\n",
+        "  print(num)\n",
+        "  "
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "-l1r363cskEf",
-        "outputId": "861313d1-e83c-4155-a328-7faea7086a1d"
+        "outputId": "ed0af8c9-6c25-4ec5-8f4f-71afae8c16fe"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "[5, 1, 2, 3, 4]"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 4
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "5\n",
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n"
+          ]
         }
       ]
     }
